<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">MyLocalizationApp</string>

    <string name="football">
        Indonesia National Team win against Thailand National Team
    </string>
    <string name="goal">
        Goal from Indonesia scored by %1$s and %2$s, so the final score is %3$d - %4$d for Indonesia victory
    </string>

    <plurals name="numberOfSongsAvailable">
        <item quantity="one">%d song found</item>
        <item quantity="other">%d song found</item>
    </plurals>

    <string name="app_homeurl">
        Visit us at
        <xliff:g id="homepage">https://www.medium.com/@dery.io</xliff:g>
    </string>

    <string name="change_language_settings">Change Language Settings</string>

    <string name="tab_text1">Home</string>
    <string name="tab_text2">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dery_sudrajat">Dery Sudrajat</string>
    <string name="github_com_derysudrajat">github.com/derysudrajat</string>
    <string name="derysudrajat">\@derysudrajat</string>
    <string name="image_profile">Image Profile</string>
    <string name="icon_github">Icon Github</string>
    <string name="icon_instagram">Icon Instagram</string>
    <string name="icon_medium">Icon Medium</string>
    <string name="my_description">A student in the Software Engineering Department, Faculty of Industrial and
        Informatics Technology, Telkom Institute of Technology, with experiences working on an Android-based project,
        and teaching as a lab assistant in 2 different department and lab, a Programming Laboratory, and Computer
        Network Laboratory. Aspiring to become a researcher and a technopreneur in the future and realize a diligent
        personality and passion for learning
    </string>
    <string name="software_engineering_student_android_enthusiasm">Software Engineering Student | Android Enthusiasm
    </string>
    <string name="address">Address</string>
    <string name="my_location">Cirebon, West Java, Indonesia</string>
    <string name="hobby">Hobby</string>
    <string name="my_hobby">Coding, Travelling, Vlogging, Photography</string>
    <string name="my_quotes">\"Stay Hungry for Knowledge, Stay Foolish to Keep Learning\"</string>
    <string name="icon_quotes">Icon Quotes</string>
    <string name="icon_location">Icon Location</string>
    <string name="icon_favourites">Icon Favourites</string>
    <string name="follow_me">Follow Me</string>
    <string name="image_backdrop">Image Backdrop</string>

</resources>