<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".ProfileFragment">

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="UselessParent">

            <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_margin="-16dp"
                    android:layout_marginTop="-50dp"
                    app:cardBackgroundColor="@color/colorPrimary"
                    app:cardCornerRadius="30dp"
                    app:cardElevation="0dp">

                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    <ImageView
                            android:id="@+id/iv_backdrop"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="#80000000"
                            android:contentDescription="@string/image_backdrop"
                            android:scaleType="centerCrop"/>

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentBottom="true"
                            android:layout_marginStart="180dp"
                            android:layout_marginLeft="180dp"
                            android:padding="16dp"
                            android:text="@string/dery_sudrajat"
                            android:textColor="@android:color/white"
                            android:textSize="22sp"
                            android:textStyle="bold"/>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                    android:id="@+id/card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="160dp"
                    app:cardCornerRadius="72dp">

                <ImageView
                        android:id="@+id/iv_profile"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:contentDescription="@string/image_profile"/>
            </androidx.cardview.widget.CardView>

            <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/card"
                    android:layout_marginTop="-62dp"
                    android:layout_toEndOf="@id/card"
                    android:layout_toRightOf="@id/card"
                    android:padding="16dp"
                    android:text="@string/software_engineering_student_android_enthusiasm"
                    android:textStyle="bold"/>

            <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/name"
                    android:layout_margin="16dp"
                    app:cardCornerRadius="8dp">

                <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    <ImageView
                            android:id="@+id/quotes"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_centerHorizontal="true"
                            android:layout_margin="16dp"
                            android:contentDescription="@string/icon_quotes"
                            android:padding="8dp"
                            android:src="@drawable/ic_format"
                            android:tint="@color/colorPrimary"/>

                    <TextView
                            android:id="@+id/my_quotes"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/quotes"
                            android:layout_marginTop="-32dp"
                            android:padding="16dp"
                            android:text="@string/my_quotes"
                            android:textAlignment="center"
                            android:textColor="@color/colorPrimary"
                            android:textSize="18sp"
                            android:textStyle="bold"/>

                    <TextView
                            android:id="@+id/desc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/my_quotes"
                            android:layout_centerHorizontal="true"
                            android:layout_margin="22dp"
                            android:text="@string/my_description"
                            android:textAlignment="center"/>

                    <LinearLayout
                            android:id="@+id/location"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/desc"
                            android:gravity="center"
                            android:orientation="horizontal"
                            tools:ignore="UseCompoundDrawables">

                        <ImageView
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_marginStart="-20dp"
                                android:layout_marginLeft="-20dp"
                                android:contentDescription="@string/icon_location"
                                android:padding="16dp"
                                android:src="@drawable/ic_location"
                                android:tint="@color/colorPrimary"/>

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="-8dp"
                                android:layout_marginLeft="-8dp"
                                android:text="@string/address"
                                android:textSize="16sp"
                                android:textStyle="bold"/>
                    </LinearLayout>

                    <TextView
                            android:id="@+id/content_location"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/location"
                            android:layout_centerHorizontal="true"
                            android:layout_margin="16dp"
                            android:text="@string/my_location"/>

                    <LinearLayout
                            android:id="@+id/fav"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/content_location"
                            android:gravity="center"
                            android:orientation="horizontal"
                            tools:ignore="UseCompoundDrawables">

                        <ImageView
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_marginStart="-20dp"
                                android:layout_marginLeft="-20dp"
                                android:contentDescription="@string/icon_favourites"
                                android:padding="16dp"
                                android:src="@drawable/ic_favorite"
                                android:tint="@color/colorPrimary"/>

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="-8dp"
                                android:layout_marginLeft="-8dp"
                                android:text="@string/hobby"
                                android:textSize="16sp"
                                android:textStyle="bold"/>

                    </LinearLayout>

                    <TextView
                            android:id="@+id/content_fav"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/fav"
                            android:layout_centerHorizontal="true"
                            android:layout_margin="16dp"
                            android:text="@string/my_hobby"/>

                    <TextView
                            android:id="@+id/follow"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/content_fav"
                            android:layout_centerHorizontal="true"
                            android:text="@string/follow_me"
                            android:textSize="16sp"
                            android:textStyle="bold"/>


                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/follow"
                            android:gravity="center"
                            android:orientation="horizontal">

                        <ImageView
                                android:id="@+id/iv_github"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_margin="16dp"
                                android:contentDescription="@string/icon_github"
                                android:padding="8dp"
                                android:tint="@color/colorPrimary"/>

                        <ImageView
                                android:id="@+id/iv_ig"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_margin="16dp"
                                android:contentDescription="@string/icon_instagram"
                                android:padding="8dp"
                                android:tint="@color/colorPrimary"/>

                        <ImageView
                                android:id="@+id/iv_medium"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_margin="16dp"
                                android:contentDescription="@string/icon_medium"
                                android:padding="8dp"
                                android:tint="@color/colorPrimary"/>

                    </LinearLayout>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>


        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</FrameLayout>